feat: show table with specialties and doctors availabilities